--- a/javascript/practiceJS.1/index.html
+++ b/javascript/practiceJS.1/index.html
@@ -20,7 +20,9 @@
             <button type="submit" onclick="calculateBMI()">Calculate</button>
         </form>
         
-        <div id="result"></div>
+        <div id="result">
+            <div id="dis"></div>
+        </div>
         
         <div class="bmi-guide">
             <h3>BMI Weight Guide</h3>
